assets/css/style.css
/* ... */
/*For media screens smaller than 970px */
@media screen and (max-width: 970px) {

    /*Header*/
    #logo,
    #navigation {
        width: 100%;
        text-align: center;
        margin: 0;
        padding: 0;
        clear: both;
        position: static;
    }

    #navigation td {
        margin-top: 5px;
    }
}


/*For media screens smaller than 768px (Tablet)*/
@media screen and (max-width: 768px) {

    /*Header*/

    #logo {
        font-size: 80%;
    }

    #navigation h2 {
        visibility: hidden;
    }

    .page-title {
        visibility: visible;
        font-size: 90%;
    }

    /*Footer*/
    #footer {
        height: auto;
        margin: 0;
        padding: 0;
    }

    #left-footer-container {
        width: 100%;
        clear: both;
        height: 80px;
        margin: 0;
        padding: 0;
        font-size: medium;
    }

    .socials {
        line-height: 50px;
        bottom: 50%;
    }

    .socials i {
        font-size: 120%;
        text-align: center;
    }

    .socials li {
        font-size: 100%;
    }

    #right-footer-container {
        width: 50%;
        float: left;
    }

    .contact {
        text-align: center;
    }

    #center-footer-container {
        width: 50%;
        height: 50px;
        float: right;
    }

    /*index.html*/

    .overlay-buttons {
        width: 90%;
        height: auto;
    }

    #overlay-gallery {
        bottom: 20px;
        margin-right: 5%;
        left: 5%;
    }

    #overlay-quote {
        bottom: 65px;
        margin-right: 5%;
        left: 5%;
    }

    /*our_services.html*/

    .services {
        padding: 5px;
        width: 100%;
    }

    .serv-text {
        width: 100%;
        clear: both;
        height: max-content;
        margin: 0;
        padding: 0;
        border: none;
    }

    .serv-text ul {
        column-count: 2;
    }

    .serv-img-container {
        width: 100%;
        clear: both;
        margin: 10px 0;
        padding: 0;
        border: none;
        overflow: auto;
        white-space: nowrap;
    }

    .serv-img-container img {
        height: 100%;
        width: auto;
    }

    /*gallery.html*/
    .gallery {
        height: 250px;
    }

    .gallery img {
        height: 220px;
    }
}



/*For media screens smaller than 426px (Phones)*/
@media screen and (max-width: 426px) {
    * {
        margin-bottom: 30px;
    }

    /*Header*/

    #logo {
        font-size: 65%;
    }

    #navigation i {
        margin-bottom: 8px;
    }

    /*Footer*/

    #center-footer-container {
        width: 100%;
        clear: both;
        margin: 0;
    }

    #right-footer-container {
        width: 100%;
        clear: both;
        margin: 0;
    }

    .contact {
        text-align: center;
        width: 100%;
        margin: 0;
    }

    /*index.html*/
    #intro-container {
        width: 100%;
        height: auto;
        margin: unset;
        padding: unset;
        border: 3px solid #3cf0d8;
    }

    #intro {
        width: auto;
        margin: unset;
        border: unset;
    }

    /*gallery.html*/
    .gallery-container {
        margin: 0;
        padding: 0;
        border: none;
    }

    .gallery {
        margin: 0;
        padding: 0;
        border: none;
    }

    .gallery img {
        margin: 0;
        padding: 0;
        border: none;
    }

    #details-container,
    #address-container,
    #services-container {
        margin: 0;
        padding: 0;
    }

    #details-container input,
    #address-container input,
    #services-container input {
        margin: 10px 0;
        padding: 0;
    }

    #details-container label,
    #address-container label,
    #services-container label {
        float: left;
        clear: both;
        line-break: auto;
        margin: 0;
        padding: 0;
    }
}

